--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
 <body>
     <header>
         <h1>Crypto Tracker</h1>
-        <p>Track trending cryptocurrencies from social media!</p>
+        <p>Track trending cryptocurrencies from CoinGecko & RugCheck APIs!</p>
     </header>
     
     <main>
