--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Crypto Tracker</h1>
-        <p>Track trending cryptocurrencies from CoinGecko & RugCheck APIs!</p>
+        <p>Track top cryptocurrencies!</p>
     </header>
     
     <main>
