--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,12 +9,12 @@
 <body>
     <header>
         <h1>Crypto Tracker</h1>
-        <p>Track top cryptocurrencies!</p>
+        <p>Track top trending cryptocurrencies in real-time!</p>
     </header>
     
     <main>
         <section id="crypto-list">
-            <h2>Trending Coins</h2>
+            <h2>Top Coins</h2>
             <ul id="coin-data"></ul>
         </section>
     </main>
